--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,10 @@
+@book{ladyman2012understanding,
+  title={Understanding philosophy of science},
+  author={Ladyman, James},
+  year={2012},
+  publisher={Routledge}
+}
+
 @Book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
@@ -538,4 +545,49 @@ publisher={University of Prince Edward Island}
   pages={458--460},
   year={1991},
   publisher={JSTOR}
+}
+
+@article{ioannidis2005most,
+  title={Why most published research findings are false},
+  author={Ioannidis, John PA},
+  journal={PLoS medicine},
+  volume={2},
+  number={8},
+  pages={e124},
+  year={2005},
+  publisher={Public Library of Science}
+}
+
+@article{goodman2007most,
+  title={Why most published research findings are false: problems in the analysis},
+  author={Goodman, Steven and Greenland, Sander},
+  journal={PLoS medicine},
+  volume={4},
+  number={4},
+  pages={e168},
+  year={2007},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{jager2014estimate,
+  title={An estimate of the science-wise false discovery rate and application to the top medical literature},
+  author={Jager, Leah R and Leek, Jeffrey T},
+  journal={Biostatistics},
+  volume={15},
+  number={1},
+  pages={1--12},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
+
+@article{cadeddu2008users,
+  title={Users' guide to the surgical literature: how to assess power and sample size},
+  author={Cadeddu, Margherita and Farrokhyar, Forough and Thoma, Achilleas and Haines, Ted and Garnett, Anna and Goldsmith, Charles H and Evidence-Based Surgery Working Group and others},
+  journal={Canadian Journal of Surgery},
+  volume={51},
+  number={6},
+  pages={476},
+  year={2008},
+  publisher={Canadian Medical Association}
 }
